--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,5 +1,15 @@
-// Folder-specific settings
-//
-// For a full list of overridable settings, and general information on folder-specific settings,
-// see the documentation: https://zed.dev/docs/configuring-zed#settings-files
-{}
+{
+  "lsp": {
+    "jdtls": {
+      "initialization_options": {
+        "settings": {
+          "java": {
+            "project": {
+              "sourcePaths": ["src", "src/main/java"],
+            },
+          },
+        },
+      },
+    },
+  },
+}
